--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "firebase": "^8.0.1"
+    "firebase": "^8.0.1",
+    "moment": "^2.29.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
